# career-prediction-benchmark

./: DATA.md  MODEL_CARD.md  Makefile  PAPER_SPEC.md  PRIVACY_FAIRNESS.md  README.md  RESULTS.md  pyproject.toml
reports/: SOURCE_RUN.txt
reports/latest/: benchmark.csv  config.yaml  data_manifest.json  environment.json  metrics.json  predictions.parquet  privacy_fairness.json  statistical_tests.json
src/careerbench/: core.py  run.py
tests/: test_core.py
