[project]
      name = "career-prediction-benchmark"
      version = "1.0.0"
      description = "Synthetic multi-output career prediction benchmark with calibration and subgroup evaluation."
      requires-python = ">=3.12,<3.13"
      dependencies = [
        "matplotlib>=3.9",
"numpy>=2.0",
"pandas>=2.2",
"pyarrow>=17",
"scikit-learn>=1.5",
      ]

      [dependency-groups]
      dev = ["pytest>=8.3", "ruff>=0.9"]

      [tool.pytest.ini_options]
      pythonpath = ["src"]
      testpaths = ["tests"]

      [tool.ruff]
      line-length = 100
      target-version = "py312"
